fixed overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -569,14 +569,20 @@ progress::-moz-progress-bar {
 
 
 @media only screen and (max-width: 600px){
-  body{
-    margin-left: 30px;
-    margin-right: 30px;
+  html{
     overflow-x: hidden;
+  }
+  body{
+    margin-left: 0px;
+    margin-right: 0px;
+    overflow-x: hidden;
+    position: relative;
 
   }
   #root{
     overflow-x: hidden;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   header h1{
